--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -88,6 +88,9 @@ body {
     --scroll_bg: rgb(235, 235, 235);
     --scroll_handle: #818181;
     --scroll_handle_active: #3f3f3f;
+
+    --contrast: #000;
+    --contrast_rev: #FFF;
  }
 
 
@@ -133,6 +136,9 @@ body {
     --scroll_bg: rgb(235, 235, 235);
     --scroll_handle: #818181;
     --scroll_handle_active: #3f3f3f;
+
+    --contrast: #FFF;
+    --contrast_rev: #000;
 }
 
 
