--- a/src/pages/Orders/orders.scss
+++ b/src/pages/Orders/orders.scss
@@ -7,7 +7,7 @@
     transition: background-color $transition-theme;
     flex-grow: 1;
 
-    & .filters {
+    /*& .filters {
         margin-top: 40px;
         width: 100%;
         display: flex;
@@ -35,25 +35,36 @@
             }
         }
 
-    }
+    }*/
 
-    .orders__container {
-        margin-top: 30px;
+    .orders {
+        margin-top: 50px;
 
+        @include respond-to(xs) {
+            padding-left: 10px;
+            padding-right: 10px;
+        }
 
         & .block_user {
-            margin-top: 140px;
-            padding: 10px;
-            width: 100%;
-           // border: 1px solid red;
-            border-radius: 15px;
             position: relative;
+            //background-color: var(--main);
+            //border-radius: $brad_xl;
+            //padding: 30px 20px;
+            margin-top: 0px;
 
-            &:first-of-type {
-                margin-top: 0px;
+            & ~ .block_user {
+                margin-top: 40px;
             }
-            
-            &:not(:first-of-type)::before {
+
+            & .user__info {
+                & h2 {
+                    margin-bottom: 0;
+                    color: var(--text);
+                }
+
+            }
+
+           /* &:not(:first-of-type)::before {
                 position: absolute;
                 top: -70px;
                 left: 50%;
@@ -63,7 +74,7 @@
                 height: 2px;
                 background-color: #fff;
                 border-radius: 2px;
-            }
+            }*/
 
             & .user__header {
                 text-align: center;
@@ -77,19 +88,23 @@
         }
 
 
-        & .orders {
+        & .orders__list {
             //border: 1px solid red;
             
             & .order {
                 //border: 2px solid white;
-                background-color: var(--main);
+                background-color: var(--main_em);
                 border-radius: 10px;
-                padding: 10px;
+                padding: 0 10px 10px;
                 margin-top: 30px;
                 position: relative;
 
+                & * {
+                    color: $black !important;
+                }
 
-                &::before {
+
+                /*&::before {
                     content: '';
                     position: absolute;
                     bottom: 100%;
@@ -97,7 +112,7 @@
                     width: 3px;
                     height: 30px;
                     background-color: #fff;
-                }
+                }*/
 
                 &:nth-of-type(1) {
                     margin-top: 20px;
@@ -114,20 +129,30 @@
                 }
     
                 & .order__cart {
+                    margin-top: 20px;
                     display: grid;
-                    margin-top: 10px;
-                    grid-template-columns: 1fr 1fr 1fr 1fr auto;
-                    border: 2px solid black;
-                    border-radius: 10px;
+                    grid-template-columns: 2fr 1fr 1fr 1fr auto;
+                    border: 1px solid black;
+                    border-radius: $brad_md;
                     
                     & .cell {
                         border-left: 1px solid black;
                         border-top: 1px solid black;
                         padding: 5px 10px;
+                        display: flex;
+                        align-items: center;
+                        @include fs_smaller;
+
+                        @include respond-to(xs) {
+                            padding: 5px 3px;
+                        }
         
                         &.head {
                             text-align: center;
                             border-top: none;
+                            @include fs_base;
+                            font-weight: 700;
+                            justify-content: center;
                         }
                         
                         &.first {
@@ -139,34 +164,47 @@
                             justify-content: center;
                             align-items: center;
                         }
+
+                        & > a:hover {
+                            text-decoration: underline;
+                        }
                     }
     
                 }
 
 
-                & .order__message-container {
+                & .order__message {
                     margin-top: 10px;
                     grid-column: 1/-1;
+                    @include fs_smaller;
     
                 }
-    
-                & .files__header {
-                    text-align: center;
-                    margin-top: 15px;   
-                }
-    
-                & .files-container {
-                    width: 100%;
-                    display: grid;
-                    grid-template-columns: 1fr 1fr 1fr;
-                    border: 1px solid var(--main_em);
-                    border-radius: 10px;
-                    //padding: 20px;
-    
-                    & > .cell {
-                        padding: 10px;
+
+                & .files {
+                    
+                    & .files__header {
+                        text-align: center;
+                        margin-top: 15px;   
+                    }
+        
+                    & .files__list {
+                        width: 100%;
+                        display: grid;
+                        grid-template-columns: 1fr 1fr 1fr;
+                        border: 1px solid var(--main_em);
+                        border-radius: 10px;
+                        //padding: 20px;
+        
+                        & > .cell {
+                            padding: 10px;
+
+                            &:hover {
+                                text-decoration: underline;
+                            }
+                        }
                     }
                 }
+    
             }
 
             
@@ -174,48 +212,49 @@
 
         }
 
-        & .pagination__container {
-            margin-top: 20px;
-            width: 80%;
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
-            justify-content: center;
-            margin-left: auto;
-            margin-right: auto;
-
-            & .pagination__page-number {
-                background-color: transparent;
-                outline: none;
-                border: none;
-                font-size: 18px;
-                padding: 5px;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                width: 30px;
-                height: 30px;
-                
-                &.selected {
-                    color: red;
-                    //background-color: #fff;
-                    //border: 1px solid blue;
-                    //border-radius: 50%;
-                    font-weight: 700;
-                }
-            }
-        }
 
 
-        & .empty-informer {
+
+        & .informer_empty {
             display: block;
             text-align: center;
-            font-size: 20px;
-            margin-top: 20%;
-
+            @include fs_bigger;
         }
 
 
+    }
+
+
+    & .pagination {
+        margin-top: 20px;
+        width: 80%;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+        justify-content: center;
+        margin-left: auto;
+        margin-right: auto;
+
+        & .pagination__page-number {
+            background-color: transparent;
+            outline: none;
+            border: none;
+            //padding: 5px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 25px;
+            height: 25px;
+            opacity: 0.8;
+            @include fs_smaller;
+            
+            &.selected {
+                font-weight: 700;
+                opacity: 1;
+                border: 1px solid var(--text);
+                border-radius: 50%;
+            }
+        }
     }
 
 }
