--- a/src/pages/ContactUs/contact-us.scss
+++ b/src/pages/ContactUs/contact-us.scss
@@ -5,6 +5,8 @@
     transition: background-color $transition-theme;
     flex-grow: 1;
 
-
+    .files-adder {
+        margin-top: 0;
+    }
 }    
 
