--- a/src/assets/css/_base.scss
+++ b/src/assets/css/_base.scss
@@ -29,30 +29,30 @@ body {
 
 
 h1 {
-    font-size: 2.2rem;
+    font-size: 2rem;
     text-align: center;
     transition: color $transition_theme;
     font-family: Arial, Helvetica, sans-serif;
     color: var(--main_em);
 
     @include respond-to(sm) {
-        font-size: 1.9rem;
+        font-size: 1.8rem;
     }
 
     @include respond-to(xs) {
-        font-size: 1.6rem;
+        font-size: 1.5rem;
     }
 }
 
 h2 {
-    font-size: 1.8rem;
+    font-size: 1.7rem;
     transition: color $transition_theme;
     font-family: Arial, Helvetica, sans-serif;
     color: var(--main_em);
     text-align: center;
 
     @include respond-to(sm) {
-        font-size: 1.5rem;
+        font-size: 1.4rem;
     }
 
     @include respond-to(xs) {
@@ -62,17 +62,18 @@ h2 {
 
 
 h3 {
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     transition: color $transition_theme;
     color: var(--main_em);
     text-align: center;
+    font-weight: 700;
 
     @include respond-to(sm) {
-        font-size: 1.2rem;
+        font-size: 1.1rem;
     }
 
     @include respond-to(xs) {
-        font-size: 1.1rem;
+        font-size: 1rem;
     }
 }
 
@@ -113,22 +114,22 @@ sup {
 p {
     transition: color $transition_theme;
     margin-top: .8rem;
-    text-indent: 2.8rem;
-    font-weight: 500;
+    text-indent: 2.5rem;
+    //font-weight: 500;
+    @include fs_base;
     
     @include respond-to(md) {
-        text-indent: 2.4rem;
+        text-indent: 2.2rem;
     }
 
     @include respond-to(sm) {
-        text-indent: 2.2rem;
+        text-indent: 2rem;
     }
     
     @include respond-to(xs) {
         text-indent: 1.7rem;
     }
 
-    @include fs_base;
 }
 
 
@@ -136,6 +137,11 @@ span {
     transition: color $transition_theme;
     font-weight: 500;
     @include fs_base;
+}
+
+textarea {
+    @include fs_base;
+    @include scroll_thin;
 }
 
 .container_page {
