--- a/src/components/CatalogList/catalog-list.scss
+++ b/src/components/CatalogList/catalog-list.scss
@@ -62,7 +62,6 @@
     
             & > li {
                 transition: $transition_base;
-                font-size: 18px;
                 line-height: 40px;
                 cursor: pointer;
                 padding-left: 10px;
@@ -73,7 +72,7 @@
                 -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
                 border-radius: 5px;
                 white-space: pre-line;
-                @include fs_bigger;
+                @include fs_base;
                 
 
                 @include respond-to(sm) {
@@ -81,7 +80,6 @@
                     margin-left: auto;
                     margin-right: auto;
                     margin-top: 5px;
-                    //font-size: 24px;
                 }
     
                 &:hover {
