--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -41,4 +41,12 @@
             margin-top: 80px;
         }
     }
+
+
+    .test {
+        position: relative;
+        border: 2px solid red;
+        height: 300px;
+        width: 100%;
+    }
 }
