--- a/src/assets/css/_components.scss
+++ b/src/assets/css/_components.scss
@@ -147,10 +147,9 @@
         }
 
         &:focus{
-            border: 2px solid $black;
-
+            outline: 2px solid $black;
             @include respond-to(xs) {
-                border: 1px solid $black;
+                outline: 1px solid $black;
             }
         }
 
