--- a/src/components/CartContent/cart-content.scss
+++ b/src/components/CartContent/cart-content.scss
@@ -140,7 +140,7 @@
                     & .color__name {
                         text-decoration: underline;
                         margin-left: 10px;
-                        text-transform: lowercase;
+                        //text-transform: lowercase;
                         font-size: .8em;
                     }
                 }
