--- a/src/components/CartContent/cart-content.scss
+++ b/src/components/CartContent/cart-content.scss
@@ -166,6 +166,10 @@
                 bottom: 0;
                 transform: translateY(-100%);
             }
+
+            & .icon_delete {
+                //fill: var(--bg);
+            }
         }
 
 
