--- a/src/components/InputHider/input-hider.scss
+++ b/src/components/InputHider/input-hider.scss
@@ -1,51 +1,51 @@
 @use '/src/assets/css/variables' as *;
 
 
-
-
 .input-hider {
     height: 100%;
     width: 100%;
-
-    & > svg {
-        height: 100%;
-        width: 100%;
-    }
-
-    & .eye {
-        fill: none;
-        stroke: #F7F7F7;
-        stroke-width: 15;
-        stroke-miterlimit: 10;
-        stroke-linecap: round;
-    }
-
-    & .pupil {
-        stroke-dasharray: 150;
-        stroke-dashoffset: 0;
-        -webkit-transform: rotate(170deg);
-        -moz-transform: rotate(170deg);
-        -o-transform: rotate(170deg);
-        -ms-transform: rotate(170deg);
-        transform: rotate(170deg);
-        -webkit-transform-origin: 50% 50%;
-        -moz-transform-origin: 50% 50%;
-        -o-transform-origin: 50% 50%;
-        -ms-transform-origin: 50% 50%;
-        transform-origin: 50% 50%;
-        animation: pupil--open .5s ease-in-out forwards;
-    }
-
-    & .lid {
-        stroke-dasharray: 222;
-        stroke-dashoffset: 0;
-        animation: lid--open .5s ease-in-out forwards;
-    }
+	display: flex;
+	align-items: center;
+	cursor: pointer;
 
 
-    &.hide {
+	.icon_eye {
+		& .eye {
+			fill: none;
+			stroke: #F7F7F7;
+			stroke-width: 15;
+			stroke-miterlimit: 10;
+			stroke-linecap: round;
+		}
+	
+		& .pupil {
+			stroke-dasharray: 150;
+			stroke-dashoffset: 0;
+			-webkit-transform: rotate(170deg);
+			-moz-transform: rotate(170deg);
+			-o-transform: rotate(170deg);
+			-ms-transform: rotate(170deg);
+			transform: rotate(170deg);
+			-webkit-transform-origin: 50% 50%;
+			-moz-transform-origin: 50% 50%;
+			-o-transform-origin: 50% 50%;
+			-ms-transform-origin: 50% 50%;
+			transform-origin: 50% 50%;
+			animation: pupil--open .5s ease-in-out forwards;
+		}
+	
+		& .eyelid {
+			stroke-dasharray: 222;
+			stroke-dashoffset: 0;
+			animation: eyelid--open .5s ease-in-out forwards;
+		}
+	
+	}
+
+
+	&.hide {
         & .eye {
-            animation: lid--close .5s ease-in-out forwards;
+            animation: eyelid--close .5s ease-in-out forwards;
         }
     
         & .pupil {
@@ -55,34 +55,35 @@
 }
 
 
-@keyframes lid--close {
+
+@keyframes eyelid--close {
     from {
-      stroke-dashoffset: 0;}
+        stroke-dashoffset: 0;}
     to {
-      stroke-dashoffset: -222;
+        stroke-dashoffset: -222;
     }
-  }
+}
   
-  @keyframes lid--open {
+@keyframes eyelid--open {
     from {
-      stroke-dashoffset: -222;}
+        stroke-dashoffset: -222;}
     to {
-      stroke-dashoffset: -444;
+        stroke-dashoffset: -444;
     }
-  }
+}
   
-  @keyframes pupil--close {
+@keyframes pupil--close {
     from {
-      stroke-dashoffset: 0;}
+        stroke-dashoffset: 0;}
     to {
-      stroke-dashoffset: -150;
+        stroke-dashoffset: -150;
     }
-  }
+}
   
-  @keyframes pupil--open {
+@keyframes pupil--open {
     from {
-      stroke-dashoffset: -150;}
+        stroke-dashoffset: -150;}
     to {
-      stroke-dashoffset: -300;
+        stroke-dashoffset: -300;
     }
-  }
+}
