--- a/src/components/RatingMoney/rating-money.scss
+++ b/src/components/RatingMoney/rating-money.scss
@@ -16,21 +16,13 @@
         gap: 5%;
         aspect-ratio: 5;
         justify-content: center;
+        align-items: center;
 
         & > .img-cont {
-            height: 100%;
+            height: 75%;
             display: flex;
             align-items: center;
 
-            & > svg {
-                height: 100%;
-                stroke: var(--rating_money);
-                filter: drop-shadow(0px 0px 3px var(--rating_money));
-    
-                &.faded {
-                    opacity: .4;
-                }
-            }
         }
     }
 
