--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -76,13 +76,13 @@ body {
     --border_compare: rgb(163, 163, 163);
     --rating_bg: rgb(196, 196, 196);
     --rating_border_inner: rgb(37, 37, 37); 
-    --rating_value_blue: rgb(86, 88, 194);
-    --rating_value_green: rgb(64, 170, 54);
-    --rating_value_red: rgb(228, 43, 43);
-    --rating_value_lilac: rgb(167, 90, 179);
+    --rating_value_blue: rgb(86, 174, 241);
+    --rating_value_green: rgb(67, 170, 55);
+    --rating_value_red: rgb(172, 113, 65);
+    --rating_value_lilac: rgb(115, 169, 192);
     --compare_selected: rgb(207, 207, 207); 
     --compare_mark: rgb(46, 46, 46);
-    --rating_money: rgb(168, 168, 136);
+    --rating_money: rgb(185, 185, 53);
 
     --cart_informer: #FFF;
 
@@ -125,10 +125,10 @@ body {
     --border_compare: rgb(109, 109, 109);
     --rating_bg: rgb(65, 65, 65);
     --rating_border_inner: rgb(180, 180, 180);
-    --rating_value_blue: rgb(80, 100, 189);
-    --rating_value_green: rgb(11, 119, 1);
-    --rating_value_red: rgb(177, 0, 0);
-    --rating_value_lilac: rgb(135, 48, 146);
+    --rating_value_blue: #0771b8;
+    --rating_value_green: rgb(43, 112, 36);
+    --rating_value_red: rgb(177, 86, 11);
+    --rating_value_lilac: rgb(48, 115, 146);
     --compare_selected: rgb(52, 65, 80);
     --compare_mark: rgb(218, 218, 218);
     --rating_money: rgb(185, 185, 141);
