--- a/src/components/CarouselMax/carouselmax.scss
+++ b/src/components/CarouselMax/carouselmax.scss
@@ -2,6 +2,7 @@
 
 
 .carouselmax {
+    //--dx: 0px;
     width: 100%;
     height: 100%;
     overflow: hidden;
@@ -18,6 +19,7 @@
         height: 100%;
         position: relative;
         width: fit-content;
+        //transform: translateX(var(--dx));
 
         
         & .img-wrapper {
@@ -64,14 +66,6 @@
                 @include respond-to(xs) {
                     height: 15px;
                     width: 15px;
-                }
-
-                & > svg > path {
-                    fill: var(--main);
-                    stroke: $black;
-                    stroke-width: 5px;
-                    stroke-dasharray: 2,2;
-                    stroke-linejoin: round;
                 }
 
                 &:hover {
