--- a/src/components/CarouselMax/carouselmax.scss
+++ b/src/components/CarouselMax/carouselmax.scss
@@ -6,12 +6,20 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
-    -webkit-user-drag: none;
-    user-select: none;
+    -webkit-user-drag: none !important;
+    user-select: none !important;  
+    user-drag: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 
     & * {
         -webkit-user-drag: none !important;
         user-select: none !important;  
+        user-drag: none;
+        -moz-user-select: none;
+        -webkit-user-select: none;
+        -ms-user-select: none;
     }
 
     & > .ribbon {
