--- a/src/components/ImageModal/image-modal.scss
+++ b/src/components/ImageModal/image-modal.scss
@@ -10,7 +10,7 @@
 
     & > .wrapper_img {
         //flex-grow: 1;
-        height: calc(100% - 40px);
+        height: calc(100%);
         width: 100%;
 
         & > img {
