--- a/src/components/Picker/picker.scss
+++ b/src/components/Picker/picker.scss
@@ -26,21 +26,23 @@
         flex-direction: column;
 
        @include respond-to(sm) {
-            max-width: 50px;
+            max-width: 80px;
        }
         
         & .image {
             width: 100%;
             aspect-ratio: 1;
             border-radius: 5px;
-            overflow: hidden;
+            //overflow: hidden;
             cursor: pointer;
             position: relative;
             
             & img {
-                height: 100%;
                 width: 100%;
+                height: 100%;
+                aspect-ratio: 1;
                 object-fit: cover;
+                border-radius: $brad_md;
             }
 
             
@@ -66,7 +68,15 @@
                 font-size: 10px;
                 margin-top: 5px;
            }
+
+           &.text_fibers {
+            text-align: center;
+            @include fs_base;
+           }
         }
+
+
+        
 
         & .buttons_control {
             display: flex;
@@ -102,16 +112,29 @@
 
         &.selected {
             & .image {
+                position: relative;
                 & > img {
                     //border-radius: $brad_md;
-                    border: 3px solid var(--contrast_rev);
+                    //border:  7px solid red;
+                }
+
+                &::before {
+                    content: "";
+                    position: absolute;
+                    width: 110%;
+                    height: 110%;
+                    top: 50%;
+                    left: 50%;
+                    border: 2px solid var(--text_reverse);
+                    transform: translate(-50%, -50%);
+                    border-radius: $brad_md;
                 }
             }
 
             & span {
                 font-weight: 700;
-                border-bottom: 2px solid var(--contrast_rev);
-                //border-radius: $brad_md;
+                text-decoration: underline;
+                //border-bottom: 2px solid var(--contrast_rev);
             }
         }
 
