--- a/src/assets/css/_base.scss
+++ b/src/assets/css/_base.scss
@@ -178,6 +178,7 @@ textarea {
 
 .block_text {
     width: 80%;
+    max-width: 80ch;
     margin-left: auto;
     margin-right: auto;
     //margin-top: 40px;
