--- a/src/assets/css/_components.scss
+++ b/src/assets/css/_components.scss
@@ -147,9 +147,9 @@
         }
 
         &:focus{
-            outline: 2px solid $black;
+            outline: 2px solid var(--contrast);
             @include respond-to(xs) {
-                outline: 1px solid $black;
+                outline: 1px solid var(--contrast);
             }
         }
 
