--- a/src/assets/css/_fonts.scss
+++ b/src/assets/css/_fonts.scss
@@ -1,8 +1,8 @@
-@font-face {
+/*@font-face {
     font-family: "Roboto-Regular";
     src: url('../fonts/Roboto-Regular.ttf') format('truetype');
-}
-
+}*/
+/*
 @font-face {
     font-family: "Nunito";
     src: url('../fonts/Nunito-ExtraLight.woff2') format('woff2'),
@@ -14,37 +14,43 @@
     src: url('../fonts/Nunito-Light.woff2') format('woff2'),
         url('../fonts/Nunito-Light.woff') format('woff');
     font-weight: 300;
-}
+}*/
 @font-face {
     font-family: "Nunito";
     src: url('../fonts/Nunito-Regular.woff2') format('woff2'),
         url('../fonts/Nunito-Regular.woff') format('woff');
     font-weight: 400;
+    font-display: swap;
 }
 @font-face {
     font-family: "Nunito";
     src: url('../fonts/Nunito-Medium.woff2') format('woff2'),
         url('../fonts/Nunito-Medium.woff') format('woff');
     font-weight: 500;
+    font-display: swap;
 }
 @font-face {
     font-family: "Nunito";
     src: url('../fonts/Nunito-SemiBold.woff2') format('woff2'),
         url('../fonts/Nunito-SemiBold.woff') format('woff');
     font-weight: 600;
+    font-display: swap;
 }
 @font-face {
     font-family: "Nunito";
     src: url('../fonts/Nunito-Bold.woff2') format('woff2'),
         url('../fonts/Nunito-Bold.woff') format('woff');
     font-weight: 700;
+    font-display: swap;
 }
 @font-face {
     font-family: "Nunito";
     src: url('../fonts/Nunito-ExtraBold.woff2') format('woff2'),
         url('../fonts/Nunito-ExtraBold.woff') format('woff');
     font-weight: 800;
+    font-display: swap;
 }
+/*
 @font-face {
     font-family: "Nunito";
     src: url('../fonts/Nunito-Black.woff2') format('woff2'),
@@ -52,4 +58,4 @@
     font-weight: 900;
 }
 
-
+*/
