--- a/src/components/AmountChanger/amount-changer.scss
+++ b/src/components/AmountChanger/amount-changer.scss
@@ -54,5 +54,9 @@
             cursor: not-allowed
         }
 
+        &:focus {
+            outline: 2px solid var(--contrast);
+        }
+
     }
 }
