--- a/src/components/LangSwitcher/langSwitcher.scss
+++ b/src/components/LangSwitcher/langSwitcher.scss
@@ -163,6 +163,9 @@ $transition_lang: cubic-bezier(0.51, 0.06, 0.56, 1.37) .2s;
     }
 
 
+    &:focus {
+        left: 20px !important;
+    }
 
 }
 
