--- a/src/assets/css/_base.scss
+++ b/src/assets/css/_base.scss
@@ -4,7 +4,7 @@
 @use "./components" as *;
 
 * {
-    font-family: Nunito;
+    font-family: 'Nunito', Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
