--- a/src/assets/css/_fonts.scss
+++ b/src/assets/css/_fonts.scss
@@ -17,36 +17,36 @@
 }*/
 @font-face {
     font-family: "Nunito";
-    src: url('../fonts/Nunito-Regular.woff2') format('woff2'),
-        url('../fonts/Nunito-Regular.woff') format('woff');
+    src: url('../fonts/Nunito-Regular-subset.woff2') format('woff2'),
+        url('../fonts/Nunito-Regular-subset.woff') format('woff');
     font-weight: 400;
     font-display: swap;
 }
 @font-face {
     font-family: "Nunito";
-    src: url('../fonts/Nunito-Medium.woff2') format('woff2'),
-        url('../fonts/Nunito-Medium.woff') format('woff');
+    src: url('../fonts/Nunito-Medium-subset.woff2') format('woff2'),
+        url('../fonts/Nunito-Medium-subset.woff') format('woff');
     font-weight: 500;
     font-display: swap;
 }
 @font-face {
     font-family: "Nunito";
-    src: url('../fonts/Nunito-SemiBold.woff2') format('woff2'),
-        url('../fonts/Nunito-SemiBold.woff') format('woff');
+    src: url('../fonts/Nunito-SemiBold-subset.woff2') format('woff2'),
+        url('../fonts/Nunito-SemiBold-subset.woff') format('woff');
     font-weight: 600;
     font-display: swap;
 }
 @font-face {
     font-family: "Nunito";
-    src: url('../fonts/Nunito-Bold.woff2') format('woff2'),
-        url('../fonts/Nunito-Bold.woff') format('woff');
+    src: url('../fonts/Nunito-Bold-subset.woff2') format('woff2'),
+        url('../fonts/Nunito-Bold-subset.woff') format('woff');
     font-weight: 700;
     font-display: swap;
 }
 @font-face {
     font-family: "Nunito";
-    src: url('../fonts/Nunito-ExtraBold.woff2') format('woff2'),
-        url('../fonts/Nunito-ExtraBold.woff') format('woff');
+    src: url('../fonts/Nunito-ExtraBold-subset.woff2') format('woff2'),
+        url('../fonts/Nunito-ExtraBold-subset.woff') format('woff');
     font-weight: 800;
     font-display: swap;
 }
