--- a/src/components/Auth/auth.scss
+++ b/src/components/Auth/auth.scss
@@ -2,8 +2,8 @@
 
 
 .login {
-    align-self: flex-start;
-    margin-top: 100px;
+    //align-self: flex-start;
+    //margin-top: 100px;
     padding: 25px;
     background-color: var(--main);
     border-radius: $brad_lg;
