--- a/src/partials/Nav/nav.scss
+++ b/src/partials/Nav/nav.scss
@@ -121,16 +121,21 @@ $gap_to_text: 5px;
                         box-sizing: border-box;
                         display: grid;
                         grid-template-rows: 0fr;
-                        overflow: hidden;
                         border-bottom-left-radius: $brad_md;
                         border-bottom-right-radius: $brad_md;
+                        max-height: calc(100vh - 60px);
+                        overflow: auto;
+                        @include scroll_thin;
+
                         
                         
                         & > .submenu__content {
                             min-height: 0;
                             padding-left: 10px;
                             padding-right: 10px;
-                            overflow: hidden;
+                            overflow: auto;
+                            @include scroll_thin;
+                            @include scroll_hidden-wo-hover;
                             border: 0px solid transparent;
                             transition: border 0s 2*$transition_subMenu, padding $transition_subMenu 1*$transition_subMenu, margin $transition_subMenu $transition_subMenu;
                     
@@ -536,7 +541,7 @@ $gap_to_text: 5px;
             width: 100%;
             border-top: 2px solid var(--main_em);
 
-            max-height: calc(100vh - 250px);
+            max-height: calc(100vh - 180px);
             overflow-x: hidden;
             overflow-y: auto;
 
