--- a/src/pages/Product/product.scss
+++ b/src/pages/Product/product.scss
@@ -50,11 +50,11 @@
         }
 
 
-        & > .button_delete__container {
+        /*& > .button_delete__container {
             width: 30px;
             height: 30px;
             margin-left: 30px;
-        }
+        }*/
     }
 
 }
