--- a/src/components/ColorSelector/color-selector.scss
+++ b/src/components/ColorSelector/color-selector.scss
@@ -1,7 +1,7 @@
 @use '/src/assets/css/variables' as *;
 
 
-.selector_color {
+.selector_color__selector {
     //margin-left: 10px;
     outline: none;
     height: 100%;
@@ -32,7 +32,7 @@
     }
 
 
-    & .color {
+    & .selector_color__color {
         //height: 50px;
         cursor: pointer;
         display: flex;
@@ -119,7 +119,7 @@
 
     }
 
-    & .current {
+    & .color_selected {
         border: 1px solid var(--main_em);
         height: 100%;
         //width: 100%;
@@ -138,7 +138,7 @@
 
 
 
-    & > .list {
+    & > .selector_color__list {
         z-index: 1000;
         width: 100%;
         max-height: 0;
@@ -153,7 +153,7 @@
     
     
     &.expanded {
-        & > .list {
+        & > .selector_color__list {
             /*position: absolute;
             bottom: 100%;*/
             max-height: none;
