accessibility issues fixed

--- a/src/components/AddToCart/add-to-cart.scss
+++ b/src/components/AddToCart/add-to-cart.scss
@@ -3,11 +3,11 @@
 
 
 .cart-adder {
-
     width: 100%;
     display: flex;
     margin-top: 30px;
     align-items: center;
+    gap: 20px;
     @include respond-to(md) {
         flex-wrap: wrap;
     }
@@ -18,13 +18,13 @@
 
 
     & .amount-changer-wrapper {
-        margin-left: 20px;
-        margin-right: 20px;
+        //margin-left: 20px;
+        //margin-right: 20px;
     }
 
     & .button_add-cart {
         @include respond-to(xs) {
-            margin-top: 30px;
+            margin-top: 10px;
             width: 100%;
             padding-top: 8px;
             padding-bottom: 8px;
