--- a/src/components/Spliders/Common/splider-common.scss
+++ b/src/components/Spliders/Common/splider-common.scss
@@ -17,6 +17,8 @@
                     align-items: center;
                     justify-content: center;
                     position: relative;
+                    outline-width: 4px;
+                    padding: 4px;
     
                     & .splide__slide-content {
                         width: 100%;
