--- a/src/components/ColorSelector/color-selector.scss
+++ b/src/components/ColorSelector/color-selector.scss
@@ -65,7 +65,7 @@
                 object-fit: cover;
             }
 
-            &:hover {
+            &:hover, &:focus {
                 & > svg {
                     position: absolute;
                     top: 50%;
@@ -75,9 +75,6 @@
                     height: 30px;
                     width: 30px;
                     flex-shrink: 0;
-                    /*& path {
-                        fill: var(--main_em);
-                    }*/
                 }
 
             }
