--- a/src/components/Mods/mods.scss
+++ b/src/components/Mods/mods.scss
@@ -43,7 +43,7 @@
                 display: flex;
                 flex-direction: column;
 
-                & > textarea {
+                & textarea {
                     flex-grow: 1;
                     min-height: 2.1rem;
                     height: 2.1rem;
